// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example frontpage/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "<strong>
	Hello, ⁨Anna⁩!
</strong>
	<p>
	⁨Anna⁩ ⁨added ⁨3⁩ new photos⁩ to ⁨her stream⁩.
</p>",
}
`;

exports[`Example localize/attributes/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "<button>Show prompt
</button>",
}
`;

exports[`Example localize/dynamic-text/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "<button>Say hello</button>",
}
`;

exports[`Example localize/static-text/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "<button>Say hello</button>",
}
`;

exports[`Example localized/attributes/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "<div>Please confirm the action.</div>
	<div><button>Ok</button>
		<button>Cancel</button></div>",
}
`;

exports[`Example localized/attributes-with-variables/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "<div>Please confirm the action for ⁨20⁩ items.</div>
	<div><button>Yes, perform action for ⁨20⁩ items</button>
		<button>Cancel</button></div>",
}
`;

exports[`Example localized/dynamic-text/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "
	You have ⁨10⁩ unread emails.
",
}
`;

exports[`Example localized/static-text/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "
	Hello, world!
",
}
`;

exports[`Example overlay/dynamic-text/App.svelte > should render 1`] = `
{
  "css": {
    "code": "div.s-inkqtEk9hetm{display:contents}.s-inkqtEk9hetm{}",
    "map": null,
  },
  "head": "",
  "html": "<div class=\\"s-inkqtEk9hetm\\">You can download \\"⁨Example Product⁩\\" by clicking
on the <strong>Download</strong> button or read
the <a data-l10n-name=\\"release-notes\\" href=\\"https://example.com/\\" target=\\"_blank\\" rel=\\"noreferrer\\">release notes</a> to learn more.</div>",
}
`;

exports[`Example overlay/static-text/App.svelte > should render 1`] = `
{
  "css": {
    "code": "div.s-inkqtEk9hetm{display:contents}.s-inkqtEk9hetm{}",
    "map": null,
  },
  "head": "",
  "html": "<div class=\\"s-inkqtEk9hetm\\">Read the <a data-l10n-name=\\"link\\" href=\\"https://example.com/\\">documentation</a> for more information.</div>",
}
`;

exports[`Example provider/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "
	Hello, world!
",
}
`;

exports[`Example tutorial/attributes/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "<label>Login
			<input type=\\"email\\" placeholder=\\"email@example.com\\" title=\\"Type your login email\\" aria-label=\\"Login input value\\"></label>",
}
`;

exports[`Example tutorial/first-steps/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "
	Hello, world!
",
}
`;

exports[`Example tutorial/interpolation/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "
	Hello, ⁨everyone⁩!
",
}
`;

exports[`Example tutorial/interpolation-custom-functions/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "
	Weekday ⁨2⁩ is ⁨Tuesday⁩
",
}
`;

exports[`Example tutorial/interpolation-formatting/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "<div>
	Your DPI ratio is ⁨1.778⁩
</div>
	<div>
	Your account balance is ⁨$1,234.56⁩
</div>
	<div>
	Today is ⁨September 13, 2022⁩
</div>",
}
`;

exports[`Example tutorial/multi-language/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "
	Hello, world!
",
}
`;

exports[`Example tutorial/translation-files/App.svelte > should render 1`] = `
{
  "css": {
    "code": "",
    "map": null,
  },
  "head": "",
  "html": "
	Hello, world!
",
}
`;
